# open-needs-db

./: docker-compose.yaml  pyproject.toml
docs/: contributing.rst  installation.rst
requirements/: docs.txt  server.txt
